@@ -329,8 +329,8 @@ void dxSAPSpace::remove( dxGeom* g )
 	int geomIdx = GEOM_GET_GEOM_IDX(g);
 	// must be in one list, not in both
 	dUASSERT(
-		dirtyIdx==GEOM_INVALID_IDX && geomIdx>=0 && geomIdx<GeomList.size() ||
-		geomIdx==GEOM_INVALID_IDX && dirtyIdx>=0 && dirtyIdx<DirtyList.size(),
+		(dirtyIdx==GEOM_INVALID_IDX && geomIdx>=0 && geomIdx<GeomList.size()) ||
+		(geomIdx==GEOM_INVALID_IDX && dirtyIdx>=0 && dirtyIdx<DirtyList.size()),
 		"geom indices messed up" );
 	if( dirtyIdx != GEOM_INVALID_IDX ) {
 		// we're in dirty list, remove
